--- a/templates/business/index.twig
+++ b/templates/business/index.twig
@@ -24,14 +24,10 @@
                 <a href="{{ business.url }}" class="relative h-48 bg-gray-200 block">
                     {% if business.businessImages.one() %}
                         {% set businessImage = business.businessImages.one() %}
-                        {% if businessImage.optimizedImage is defined and businessImage.optimizedImage %}
-                        <picture>
-                            <source srcset="{{ businessImage.optimizedImage.srcWebp() }}" type="image/webp">
-                            <source srcset="{{ businessImage.optimizedImage.src() }}" type="image/jpeg">
-                            <img src="{{ businessImage.url }}" alt="{{ businessImage.title ?: business.title }}" class="w-full h-full object-cover">
-                        </picture>
+                        {% if businessImage.optimizedImage %}
+                            {{ businessImage.optimizedImage.pictureTag().imgAttrs({'alt': businessImage.title ?: business.title, 'class': 'w-full h-full object-cover'}).render() }}
                         {% else %}
-                        <img src="{{ businessImage.url }}" alt="{{ businessImage.title ?: business.title }}" class="w-full h-full object-cover">
+                            <img src="{{ businessImage.url }}" alt="{{ businessImage.title ?: business.title }}" class="w-full h-full object-cover">
                         {% endif %}
                     {% else %}
                         <div class="w-full h-full flex items-center justify-center">
