--- a/templates/_layouts/base.twig
+++ b/templates/_layouts/base.twig
@@ -27,7 +27,7 @@
             <div class="flex justify-between items-center py-3 md:py-4">
                 <div class="flex items-center">
                     <a href="/" class="flex items-center group">
-                        <img src="/uploads/trans-" alt="Gifts Around" class="h-12 md:h-16 w-auto transition-transform duration-200 group-hover:scale-105">
+                        <img src="/uploads/trans-logo.png" alt="Gifts Around" class="h-12 md:h-16 w-auto transition-transform duration-200 group-hover:scale-105">
                     </a>
                 </div>
 
